# CudaSDF

./: CMakeLists.txt  CUDA_Parallelization_Plan.md  README.md  build_cuda_v124.bat
assets/: README.md
docs/uv primitive mapping/Design/: GRID_UV_PACKER_CUDA_FEASIBILITY.md  PRIMITIVE_UV_MAPPING_DESIGN.md  PRIMITIVE_UV_MAPPING_IMPLEMENTATION.md  PRIMITIVE_UV_MAPPING_QUICKREF.md  PRIMITIVE_UV_MAPPING_SUMMARY.md  cuda_uv_atlas_packer_v_1_specification_aligned_x_grid.md  uv_atlas_prompt.txt
docs/uv primitive mapping/Implementation/: CUDA_UV_ATLAS_PACKER_IMPLEMENTATION.md  DUAL_CONTOURING_CUDA_IMPLEMENTATION.md  INTEGRATION_GUIDE.md  QUICK_START_TEXTURES.md  SEAM_AWARE_UV_REFACTORING.md  SESSION_SUMMARY.md  SHADER_INTEGRATION_TEXTURE_ARRAYS.md  TEXTURE_ARRAY_INTEGRATION_COMPLETE.md  TRIANGLE_PRIMITIVE_CONSISTENCY_FIX.md  UV_IMPLEMENTATION_COMPLETE.md  UV_IMPLEMENTATION_FINAL.md  UV_QUICK_REFERENCE.md
planning/: CUDA UV Atlas Unwrap Plan.md
src/: Camera.cpp  Camera.h  Commons.cuh  CudaSDFMesh.h  DebugDraw.cpp  DebugDraw.h  MarchingCubesTables.cuh  UVAtlasUnwrap.cpp  UVAtlasUnwrap.h  Wrappers.cu  main.cpp
src/SDFMesh/: Commons.cuh  CudaSDFMesh.cpp  CudaSDFMesh.h  CudaSDFUtil.h  GridUVPacker.cu  GridUVPacker.cuh  MarchingCubesKernels.cu  TextureLoader.h  Wrappers.cu
src/uv_unwrap/: HARMONIC_PARAMETERIZATION_ISSUES.md  README.md
src/uv_unwrap/common/: adjacency.h  mesh.cpp  mesh.h
src/uv_unwrap/unwrap/: atlas_packer.cpp  atlas_packer.h  chart_builder.cpp  flatten_harmonic.cpp  flatten_harmonic.h  seam_splitter.cpp  seam_splitter.h  unwrap_pipeline.cpp  unwrap_pipeline.h  unwrap_result.h
src/uv_unwrap_harmonic_parameterization/: CUDA UV Atlas Unwrap Plan.md  HARMONIC_PARAMETERIZATION_ISSUES_feedback_from_chatgpt.txt  IMPLEMENTATION_SUMMARY.md  LSCM_IMPLEMENTATION.md  README.md  last_prompt.txt
src/uv_unwrap_harmonic_parameterization/common/: adjacency.cpp  hash_utils.h  image_view.h  math_types.h
src/uv_unwrap_harmonic_parameterization/unwrap/: atlas_packer.h  boundary_loops.cpp  boundary_loops.h  chart_builder.h  flatten_lscm.cpp  flatten_lscm.h  unwrap_config.h  unwrap_pipeline.cpp  uv_validation.cpp  uv_validation.h
src/uv_unwrap_wavefront/: uvcuda_unwrap_design_updated_v3.md  uvcuda_unwrap_design_updated_with_friction.md
